-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
When "lnetctl net add" is called for an interface/net pair that already exists, the error code returned is EINVAL. It should be EEXIST, so the user knows that the net is already configured.
[olaf@diane lustre]$ sudo lnet/utils/lnetctl net add --net tcp1 --if enp0s3
[olaf@diane lustre]$ sudo lnet/utils/lnetctl net add --net tcp1 --if enp0s3
add:
- net:
errno: -22
descr: "cannot add network: Invalid argument"